--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="Description" content="Put your description here.">
   <base href="/">
-
   <style>
     html,
     body {
@@ -16,13 +14,13 @@
       background-color: #ededed;
     }
   </style>
-  <title>wc-firestore</title>
+  <title>tiktok web</title>
 </head>
 
 <body>
-  <wc-firestore></wc-firestore>
+  <tiktok-web></tiktok-web>
 
-  <script type="module" src="./src/wc-firestore.js"></script>
+  <script type="module" src="./src/tiktok-web.js"></script>
 </body>
 
 </html>
