Select Start or ENd

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <button>Start</button>
+    <button id="start">Start</button>
+    <button id="end">End</button>
     <script src="popup.js"></script>
   </body>
 </html>
